# aliyun-opensearch-cpp-sdk

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  covtest.sh  lint.sh
core/: Exception.h
core/auth/: AcsURLEncoder.cc  AcsURLEncoder.h  Credential.h  HmacSha1.cc  HmacSha256.cc  HmacSha256.h  ISignatureComposer.cc  ISignatureComposer.h  ISigner.h  OssSignatureComposer.cc  OssSignatureComposer.h  RoaSignatureComposer.cc  RoaSignatureComposer.h  RpcSignatureComposer.cc
core/http/: FormatType.cc  FormatType.h  HttpRequest.cc  HttpRequest.h  HttpResponse.cc  HttpResponse.h  MethodType.cc  MethodType.h  ProtocolType.cc  ProtocolType.h  X509TrustAll.h
core/reader/: JsonReader.cc  JsonReader.h  Reader.h  XmlReader.cc
core/utils/: Any.h  Base64Helper.cc  Base64Helper.h  Date.cc  Date.h  ParameterHelper.cc  ParameterHelper.h  StringUtils.cc  StringUtils.h
include/aliyun/: exception.h  opensearch.h
include/aliyun/auth/: AcsURLEncoder.h  Credential.h  HmacSha1.h  HmacSha256.h  ICredentialProvider.h  ISignatureComposer.h  ISigner.h  RpcSignatureComposer.h  credential.h  hmac_sha1.h  hmac_sha256.h  icredential_provider.h  isigner.h  url_encoder.h
include/aliyun/http/: FormatType.h  HttpRequest.h  HttpResponse.h  MethodType.h  ProtocolType.h  X509TrustAll.h  format_type.h  http_request.h  http_response.h  method_type.h  protocol_type.h  x509_trust_all.h
include/aliyun/opensearch/: CloudsearchClient.h  CloudsearchDoc.h  CloudsearchIndex.h  CloudsearchSearch.h  CloudsearchSuggest.h  cloudsearch_client.h  cloudsearch_doc.h  cloudsearch_index.h  cloudsearch_search.h  cloudsearch_suggest.h
include/aliyun/opensearch/object/: DocItems.h  KeyTypeEnum.h  SchemaTable.h  SchemaTableField.h  SchemaTableFieldType.h  SearchTypeEnum.h  SingleDoc.h  doc_items.h  key_type_enum.h  schema_table.h  schema_table_field.h  schema_table_field_type.h  search_type_enum.h  single_doc.h
include/aliyun/reader/: JsonReader.h  ReaderFactory.h  XmlReader.h  json_reader.h  reader.h  reader_factory.h  xml_reader.h
include/aliyun/utils/: Any.h  Base64Helper.h  Date.h  ParameterHelper.h  StringUtils.h  any.h  base64_helper.h  date.h  parameter_helper.h  string_utils.h
include/aliyun/utils/details/: GlobalInitializer.h  global_initializer.h
opensearch/: CloudsearchClient.cc  CloudsearchClient.h  CloudsearchDoc.cc  CloudsearchDoc.h  CloudsearchIndex.cc  CloudsearchIndex.h  CloudsearchSearch.cc  CloudsearchSearch.h  CloudsearchSuggest.cc  CloudsearchSuggest.h
opensearch/object/: DocItems.cc  DocItems.h  KeyTypeEnum.cc  SchemaTable.cc  SchemaTable.h  SchemaTableField.cc  SchemaTableField.h  SchemaTableFieldType.cc  SearchTypeEnum.cc  SearchTypeEnum.h  SingleDoc.cc  SingleDoc.h
src/auth/: AcsURLEncoder.cc  HmacSha1.cc  HmacSha256.cc  ISignatureComposer.cc  OssSignatureComposer.cc  RoaSignatureComposer.cc  RpcSignatureComposer.cc  hmac_sha1.cc  hmac_sha256.cc  url_encoder.cc
src/http/: FormatType.cc  HttpRequest.cc  HttpResponse.cc  MethodType.cc  ProtocolType.cc  format_type.cc  http_request.cc  http_response.cc  method_type.cc  protocol_type.cc
src/opensearch/: CloudsearchClient.cc  CloudsearchDoc.cc  CloudsearchIndex.cc  CloudsearchSearch.cc  CloudsearchSuggest.cc  cloudsearch_client.cc  cloudsearch_doc.cc  cloudsearch_index.cc  cloudsearch_search.cc  cloudsearch_suggest.cc
src/opensearch/object/: DocItems.cc  KeyTypeEnum.cc  SchemaTable.cc  SchemaTableField.cc  SchemaTableFieldType.cc  SearchTypeEnum.cc  SingleDoc.cc  doc_items.cc  key_type_enum.cc  schema_table.cc  schema_table_field.cc  schema_table_field_type.cc  search_type_enum.cc  single_doc.cc
src/reader/: JsonReader.cc  XmlReader.cc  json_reader.cc  xml_reader.cc
src/utils/: Base64Helper.cc  Date.cc  ParameterHelper.cc  StringUtils.cc  base64_helper.cc  date.cc  parameter_helper.cc  string_utils.cc
src/utils/details/: GlobalInitializer.cc  global_initializer.cc
tests/: CMakeLists.txt  curl-test.cc
tests/basetest/: Base64Test.cc  CredentialTest.cc  HmacTest.cc  HttpTest.cc  HttpTypesTest.cc  JsonReaderTest.cc  ParamterHelperTest.cc  XmlReaderTest.cc  any_test.cc  base64_test.cc  credential_test.cc  hmac_test.cc  http_test.cc  http_types_test.cc  json_reader_test.cc  paramter_helper_test.cc  xml_reader_test.cc
tests/opensearch/: CloudsearchClientTest.cc  CloudsearchDocTest.cc  CloudsearchIndexTest.cc  CloudsearchSearchTest.cc  CloudsearchSuggestTest.cc  cloudsearch_client_test.cc  cloudsearch_doc_test.cc  cloudsearch_index_test.cc  cloudsearch_search_test.cc  cloudsearch_suggest_test.cc
tests/opensearch/object/: DocItemsTest.cc  SchemaTableTest.cc  SingleDocTest.cc  TypesTest.cc  doc_items_test.cc  key_type_enum_test.cc  schema_table_field_test.cc  schema_table_test.cc  search_type_enum_test.cc  single_doc_test.cc  types_test.cc
